@@ -4,6 +4,8 @@
  * #960: Fix for archives storing relative source directory paths such that they contain the working
    directory.
  * #960: Fix the "spot" check to support relative source directory paths.
+ * #965: Fix a borgmatic runtime directory error when running the "spot" check with a database hook
+   enabled.
  * Fix the "spot" check to no longer consider pipe files within an archive for file comparisons.
  * Fix auto-excluding of special files (when databases are configured) to support relative source
    directory paths.
